@@ -9,7 +9,6 @@ package org.eclipse.rdf4j.common.lang;
 
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
@@ -37,7 +36,7 @@ public class FileFormat {
 	/**
 	 * The file format's MIME types. The first item in the list is interpreted as the default MIME type for the format.
 	 */
-	private final List<String> mimeTypes = new ArrayList<>(1);
+	private final List<String> mimeTypes;
 
 	/**
 	 * The file format's (default) charset.
@@ -48,7 +47,7 @@ public class FileFormat {
 	 * The file format's file extensions. The first item in the list is interpreted as the default file extension for
 	 * the format.
 	 */
-	private final List<String> fileExtensions = new ArrayList<>(1);
+	private final List<String> fileExtensions;
 
 	/*--------------*
 	 * Constructors *
@@ -64,7 +63,7 @@ public class FileFormat {
 	 * @param fileExtension The (default) file extension for the file format, e.g. <var>txt</var> for plain text files.
 	 */
 	public FileFormat(String name, String mimeType, Charset charset, String fileExtension) {
-		this(name, Arrays.asList(mimeType), charset, Arrays.asList(fileExtension));
+		this(name, List.of(mimeType), charset, List.of(fileExtension));
 	}
 
 	/**
@@ -79,7 +78,7 @@ public class FileFormat {
 	 *                       item in the list is interpreted as the default file extension for the format.
 	 */
 	public FileFormat(String name, String mimeType, Charset charset, Collection<String> fileExtensions) {
-		this(name, Arrays.asList(mimeType), charset, fileExtensions);
+		this(name, List.of(mimeType), charset, fileExtensions);
 	}
 
 	/**
@@ -101,9 +100,9 @@ public class FileFormat {
 		assert fileExtensions != null : "fileExtensions must not be null";
 
 		this.name = name;
-		this.mimeTypes.addAll(mimeTypes);
+		this.mimeTypes = new ArrayList<>(mimeTypes);
 		this.charset = charset;
-		this.fileExtensions.addAll(fileExtensions);
+		this.fileExtensions = new ArrayList<>(fileExtensions);
 	}
 
 	/*---------*
