@@ -8,14 +8,13 @@
 
 package org.eclipse.rdf4j.sail.shacl;
 
-import static junit.framework.TestCase.assertTrue;
-
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import org.eclipse.rdf4j.model.Resource;
 import org.eclipse.rdf4j.model.Value;
 import org.eclipse.rdf4j.model.impl.SimpleValueFactory;
 import org.eclipse.rdf4j.sail.shacl.ast.constraintcomponents.ConstraintComponent;
@@ -25,17 +24,19 @@ import org.eclipse.rdf4j.sail.shacl.ast.planNodes.PlanNode;
 import org.eclipse.rdf4j.sail.shacl.ast.planNodes.ValidationTuple;
 import org.eclipse.rdf4j.sail.shacl.mock.MockConsumePlanNode;
 import org.eclipse.rdf4j.sail.shacl.mock.MockInputPlanNode;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 
 /**
  * @author Håvard Ottestad
  */
 public class InnerJoinTest {
+	public static final Resource[] CONTEXTS = { null };
 
 	@Test
 	public void testSimple() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a"));
+		PlanNode left = new MockInputPlanNode(List.of("a"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -51,7 +52,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple2() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -67,7 +68,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple3() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -83,8 +84,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple4() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList());
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
+		PlanNode right = new MockInputPlanNode(List.of());
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
 
@@ -100,7 +101,7 @@ public class InnerJoinTest {
 	public void testSimple5() {
 
 		PlanNode left = new MockInputPlanNode();
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode right = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
 
@@ -115,8 +116,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple6() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a3", "b3"), Arrays.asList("a4", "b4"));
 
@@ -134,7 +135,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple7() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -150,7 +151,7 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple8() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a3", "b3"));
 
@@ -167,8 +168,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple9() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a2", "b22"), Arrays.asList("a3", "b3"), Arrays.asList("a4", "b4"));
 
@@ -186,8 +187,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple10() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a2", "b2"),
 				Arrays.asList("a2", "b22"), Arrays.asList("a4", "b4"));
 
@@ -205,8 +206,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple11() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"),
 				Arrays.asList("a4", "b4"));
 
@@ -223,8 +224,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple12() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"));
 
 		PlanNode innerJoin = new InnerJoin(left, right).getJoined(BufferedPlanNode.class);
@@ -240,8 +241,8 @@ public class InnerJoinTest {
 	@Test
 	public void testSimple13() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a1"), Arrays.asList("a2"), Arrays.asList("a3"),
-				Arrays.asList("a4"));
+		PlanNode left = new MockInputPlanNode(List.of("a1"), List.of("a2"), List.of("a3"),
+				List.of("a4"));
 		PlanNode right = new MockInputPlanNode(Arrays.asList("a1", "b1"), Arrays.asList("a1", "b11"),
 				Arrays.asList("a2", "b2"), Arrays.asList("a2", "b22"));
 
@@ -257,7 +258,7 @@ public class InnerJoinTest {
 	}
 
 	@SafeVarargs
-	private final void verify(List<ValidationTuple> actual, List<String>... expect) {
+	private void verify(List<ValidationTuple> actual, List<String>... expect) {
 
 		Set<ValidationTuple> collect = Arrays.stream(expect)
 				.map(strings -> strings.stream()
@@ -266,14 +267,14 @@ public class InnerJoinTest {
 						.collect(Collectors.toList()))
 				.map(v -> {
 					assert (v.size() == 2);
-					return new ValidationTuple(v, ConstraintComponent.Scope.propertyShape, true);
+					return new ValidationTuple(v, ConstraintComponent.Scope.propertyShape, true, CONTEXTS);
 				})
 				.collect(Collectors.toSet());
 
 		Set<ValidationTuple> actualSet = new HashSet<>(actual);
 
-		assertTrue(collect.containsAll(actualSet));
-		assertTrue(actualSet.containsAll(collect));
+		Assertions.assertTrue(collect.containsAll(actualSet));
+		Assertions.assertTrue(actualSet.containsAll(collect));
 
 	}
 
