@@ -8,7 +8,6 @@
 package org.eclipse.rdf4j.http.server.repository.contexts;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -42,7 +41,7 @@ import org.springframework.web.servlet.mvc.AbstractController;
 public class ContextsController extends AbstractController {
 
 	public ContextsController() throws ApplicationContextException {
-		setSupportedMethods(new String[] { METHOD_GET, METHOD_HEAD });
+		setSupportedMethods(METHOD_GET, METHOD_HEAD);
 	}
 
 	@Override
@@ -53,7 +52,7 @@ public class ContextsController extends AbstractController {
 				TupleQueryResultWriterRegistry.getInstance());
 
 		if (METHOD_GET.equals(request.getMethod())) {
-			List<String> columnNames = Arrays.asList("contextID");
+			List<String> columnNames = List.of("contextID");
 			List<BindingSet> contexts = new ArrayList<>();
 			RepositoryConnection repositoryCon = RepositoryInterceptor.getRepositoryConnection(request);
 			try {
